# algorithmsDataStructures-project

exercise1 /: build.sh  main  main.c  mio main.c  utility.c  utility.h
exercise1 /adt/: adt.c  adt.h
exercise1 /adt/flt/: adtflt.c  adtflt.h
exercise1 /adt/int/: adtint.c  adtint.h
exercise1 /adt/rec/: adtrec.c  adtrec.h
exercise1 /adt/str/: adtstr.c  adtstr.h
exercise1 /queue/: queue.c  queue.h
exercise1 /queue/lst/: queuelst.c  queuelst.h
exercise1 /queue/vec/: queuevec.c  queuevec.h
exercise1 /stack/: stack.c  stack.h
exercise1 /stack/lst/: stacklst.c  stacklst.h
exercise1 /stack/vec/: stackvec.c  stackvec.h
exercise2/: build.sh  main.c  utility.h
exercise2/adt/: adt.c  adt.h
exercise2/adt/flt/: adtflt.h
exercise2/adt/int/: adtint.h
exercise2/adt/ptr/: adtptr.c  adtptr.h
exercise2/adt/rec/: adtrec.c  adtrec.h
exercise2/adt/str/: adtstr.c  adtstr.h
exercise2/bst/: bst.c  bst.h  bstitrbreadth.c  bstitrinord.c  bstitrpostord.c  bstitrpostord.h  bstitrpreord.c  bstitrpreord.h
exercise2/bst/itr/: bstitr.c  bstitr.h
exercise2/bst/rec/: bstrec.c  bstrec.h
exercise2/itr/: itr.c  itr.h
exercise2/queue/: queue.c  queue.h
exercise2/queue/lst/: queuelst.c  queuelst.h
exercise2/queue/vec/: queuevec.c
exercise2/stack/: stack.c  stack.h
exercise2/stack/lst/: stacklst.c  stacklst.h
exercise2/stack/vec/: stackvec.c
exercise3/: CMakeLists.txt  build.sh  main.c  utility.c
exercise3/adt/: adt.c  adt.h
exercise3/adt/flt/: adtflt.c
exercise3/adt/int/: adtint.c
exercise3/adt/ptr/: adtptr.c  adtptr.h
exercise3/adt/rec/: adtrec.c  adtrec.h
exercise3/adt/str/: adtstr.c
exercise3/adt/vert/: adtvert.c  adtvert.h
exercise3/bst/: bst.c  bst.h  bstitrbreadth.c  bstitrbreadth.h  bstitrinord.c  bstitrinord.h  bstitrpostord.c  bstitrpreord.c  bstitrpreord.h
exercise3/bst/itr/: bstitr.c  bstitr.h
exercise3/bst/rec/: bstrec.c  bstrec.h
exercise3/graph/: graph.c  graph.h  graphitrbreadth.c  graphitrbreadth.h  graphitrpostord.c  graphitrpostord.h  graphitrpreord.c  graphitrpreord.h  vertitr.c  vertitr.h
exercise3/graph/itr/: graphitr.c  graphitr.h
exercise3/graph/rec/: graphrec.c  graphrec.h
exercise3/graph/rep/bst/: bstitr.c  bstitr.h  graphbst.c  graphbst.h
exercise3/graph/rep/lst/: graphlst.c  graphlst.h
exercise3/graph/rep/mat/: edgitr .c  edgitr .h  graphmat.c  graphmat.h  matitr.c  matitr.h
exercise3/itr/: itr.c  itr.h
exercise3/list/: itrlist.c  itrlist.h  list.c  list.h
exercise3/queue/: queue.c
exercise3/queue/lst/: queuelst.c
exercise3/queue/vec/: queuevec.c  queuevec.h
exercise3/stack/: stack.c  stack.h
exercise3/stack/lst/: stacklst.c
exercise3/stack/vec/: stackvec.c  stackvec.h
