cmake_minimum_required(VERSION 3.13)
project(exercise3 C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(adt)
include_directories(adt/flt)
include_directories(adt/int)
include_directories(adt/ptr)
include_directories(adt/rec)
include_directories(adt/str)
include_directories(adt/vert)
include_directories(bst)
include_directories(bst/itr)
include_directories(bst/rec)
include_directories(graph)
include_directories(graph/itr)
include_directories(graph/rec)
include_directories(graph/rep/bst)
include_directories(graph/rep/lst)
include_directories(graph/rep/mat)
include_directories(itr)
include_directories(list)
include_directories(queue)
include_directories(queue/lst)
include_directories(queue/vec)
include_directories(stack)
include_directories(stack/lst)
include_directories(stack/vec)

add_executable(exercise3
        adt/flt/adtflt.c
        adt/flt/adtflt.h
        adt/int/adtint.c
        adt/int/adtint.h
        adt/ptr/adtptr.c
        adt/ptr/adtptr.h
        adt/rec/adtrec.c
        adt/rec/adtrec.h
        adt/str/adtstr.c
        adt/str/adtstr.h
        adt/vert/adtvert.c
        adt/vert/adtvert.h
        adt/adt.c
        adt/adt.h
        bst/itr/bstitr.c
        bst/itr/bstitr.h
        bst/rec/bstrec.c
        bst/rec/bstrec.h
        bst/bst.c
        bst/bst.h
        bst/bstitrbreadth.c
        bst/bstitrbreadth.h
        bst/bstitrinord.c
        bst/bstitrinord.h
        bst/bstitrpostord.c
        bst/bstitrpostord.h
        bst/bstitrpreord.c
        bst/bstitrpreord.h
        graph/itr/graphitr.c
        graph/itr/graphitr.h
        graph/rec/graphrec.c
        graph/rec/graphrec.h
        graph/rep/bst/bstitr.c
        graph/rep/bst/bstitr.h
        graph/rep/bst/graphbst.c
        graph/rep/bst/graphbst.h
        graph/rep/lst/graphlst.c
        graph/rep/lst/graphlst.h
        "graph/rep/mat/edgitr .c"
        "graph/rep/mat/edgitr .h"
        graph/rep/mat/graphmat.c
        graph/rep/mat/graphmat.h
        graph/rep/mat/matitr.c
        graph/rep/mat/matitr.h
        graph/graph.c
        graph/graph.h
        graph/graphitrbreadth.c
        graph/graphitrbreadth.h
        graph/graphitrpostord.c
        graph/graphitrpostord.h
        graph/graphitrpreord.c
        graph/graphitrpreord.h
        graph/vertitr.c
        graph/vertitr.h
        itr/itr.c
        itr/itr.h
        list/itrlist.c
        list/itrlist.h
        list/list.c
        list/list.h
        queue/lst/queuelst.c
        queue/lst/queuelst.h
        queue/vec/queuevec.c
        queue/vec/queuevec.h
        queue/queue.c
        queue/queue.h
        stack/lst/stacklst.c
        stack/lst/stacklst.h
        stack/vec/stackvec.c
        stack/vec/stackvec.h
        stack/stack.c
        stack/stack.h
        main.c
        utility.c
        utility.h)
